[project]
name = "hakone-geo-walker"
version = "0.1.0"
description = "東海道箱根のミニ研究論文"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Susumu ISHIGAMI", email = "susumu.ishigami@gmail.com" }
]
keywords = ["research", "geography", "hakone", "tokaido"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "sphinx>=7.0.0",
    "myst-parser>=2.0.0",
    "sphinxcontrib-bibtex>=2.5.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
latex = [
    "latexmk",
]

[project.urls]
Homepage = "https://github.com/susumuishigami/hakone-geo-walker"
Repository = "https://github.com/susumuishigami/hakone-geo-walker"
Issues = "https://github.com/susumuishigami/hakone-geo-walker/issues"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "code",
]